syntax = "proto3";

option csharp_namespace = "GrpcServer.Protos";

service RemoteArtist{
	rpc GetArtistInfo(ArtistLookUpModel) returns (ArtistModel);
	rpc GetNewArtists(NewArtistsRequest) returns (stream ArtistModel);
	rpc InsertArtists (ArtistModel) returns (NewArtistsRequest);
	rpc UpdateArtists (ArtistModel) returns (NewArtistsRequest);
	rpc DeleteArtists (ArtistLookUpModel) returns (NewArtistsRequest);
}

message NewArtistsRequest{

}

message ArtistLookUpModel {
	int32 ArtistId = 1;
}

message ArtistModel{
	int32 ArtistId = 1;
	string Name = 2;
}
